# reaction-diffusion-solver

./: .gitignore  LICENSE  README.md  benchmarking.py  pyproject.toml  requirements.txt  setup.py
examples/: flower_example.py  mitosis_example.py
scripts/: benchmarking.py  example_gray_scott.py
src/rdsolver/: __init__.py  config.py
src/rdsolver/model/: initial_conditions.py
src/rdsolver/solvers/: euler_base.py  euler_cuda.py  euler_numba.py  euler_numba_parallel.py  euler_numpy.py  euler_parallel.py  euler_pure_python.py  euler_pybind.cpp  euler_pybind.py  euler_pybind_parallel.py
src/rdsolver/utils/: gif_utils.py  pattern_plotting.py
