[build-system]
requires = ["setuptools>=42", "pybind11>=2.10.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "reaction-diffusion-solver"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "numpy==2.3.5",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.61.0",
    "iniconfig==2.0",
    "kiwisolver==1.4.9",
    "llvmlite==0.46.0",
    "matplotlib==3.10.7",
    "numba==0.63.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pyparsing==3.2.5",
    "PyQt6==6.10.1",
    "PyQt6-Qt6==6.10.1",
    "PyQt6_sip==13.10.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tqdm==4.67.1",
    "tzdata==2025.3",
]
