[build-system]
requires = ["setuptools>=42", "pybind11>=2.10.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "reaction-diffusion-solver"
version = "0.1.0"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "numpy==2.3.5",
    "matplotlib==3.10.7",
    "numba==0.63.1",
    "pandas==2.3.3",
    "PyQt6==6.10.1", 
    "tqdm==4.67.1",
]
